syntax = "proto3";

option go_package = "voipcalls";

package voipcalls;

import "rpc_error_codes.proto";
import "schema.tl.core_types.proto";
import "schema.tl.crc32.proto";
import "schema.tl.handshake.proto";
import "schema.tl.handshake_service.proto";
import "schema.tl.sync.proto";
import "schema.tl.sync_service.proto";
import "schema.tl.transport.proto";
import "schema.tl.transport_service.proto";
import "service.tl.proto";

message TLMessagesDeletePhoneCallHistory {}
message Messages_AffectedFoundMessages {}
message TLPhoneGetCallConfig {}
message DataJSON {}
message TLPhoneRequestCall {}
message Phone_PhoneCall {}
message TLPhoneAcceptCall {}
message TLPhoneConfirmCall {}
message TLPhoneReceivedCall {}
message Bool {}
message Updates {}
message TLPhoneDiscardCall {}
message TLPhoneSetCallRating {}
message TLPhoneSaveCallDebug {}
message TLPhoneSendSignalingData {}
message TLPhoneSaveCallLog {}

service RPCVoipCalls {
  rpc MessagesDeletePhoneCallHistory(TLMessagesDeletePhoneCallHistory) returns (Messages_AffectedFoundMessages);
  rpc PhoneGetCallConfig(TLPhoneGetCallConfig) returns (DataJSON);
  rpc PhoneRequestCall(TLPhoneRequestCall) returns (Phone_PhoneCall);
  rpc PhoneAcceptCall(TLPhoneAcceptCall) returns (Phone_PhoneCall);
  rpc PhoneConfirmCall(TLPhoneConfirmCall) returns (Phone_PhoneCall);
  rpc PhoneReceivedCall(TLPhoneReceivedCall) returns (Bool);
  rpc PhoneDiscardCall(TLPhoneDiscardCall) returns (Updates);
  rpc PhoneSetCallRating(TLPhoneSetCallRating) returns (Updates);
  rpc PhoneSaveCallDebug(TLPhoneSaveCallDebug) returns (Bool);
  rpc PhoneSendSignalingData(TLPhoneSendSignalingData) returns (Bool);
  rpc PhoneSaveCallLog(TLPhoneSaveCallLog) returns (Bool);
}
